# ts_deplint

./: CHANGELOG.md  Cargo.toml  renovate.json
.github/workflows/: ci.yaml  release.yml
npm/ts_deplint/: package.json
src/: diagram.rs  disallowed.rs  lib.rs  main.rs  rules.rs  ts_reader.rs  visit.rs
tests/: ts_reader_test.rs
tests/fixtures/: sample.ts
