[package]
name = "ts_deplint"
version = "0.0.15"
edition = "2021"
repository = "https://github.com/maxh/ts_deplint"
description = "A tool to lint dependencies within TypeScript projects"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
